--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scratch to Reveal Card</title>
+  <title>Abasss valentine</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     canvas {
@@ -16,15 +16,15 @@
 </head>
 <body class="bg-gradient-to-b from-pink-200 to-red-300 min-h-screen flex items-center justify-center">
   <div class="w-96 p-6 bg-white rounded-2xl shadow-lg relative">
-    <h1 class="text-red-500 text-3xl font-bold mb-2 text-center">Scratch to Reveal!</h1>
-    <p class="text-gray-600 text-sm text-center mb-4">Scratch the card to reveal the hidden surprise!</p>
+    <h1 class="text-red-500 text-3xl font-bold mb-2 text-center">Scratch to Love!</h1>
+    <p class="text-gray-600 text-sm text-center mb-4">Gosok dan temukan bocil kematian didalamnya!</p>
 
     <div class="relative overflow-hidden rounded-2xl">
       <img id="hiddenImage" class="rounded-2xl w-full" src="https://res.cloudinary.com/dyocebxoe/image/upload/v1739027444/IMG20250208210823_foigwj.jpg" alt="Hidden Image">
       <canvas id="scratchCanvas" class="absolute inset-0"></canvas>
     </div>
 
-    <p class="text-center mt-4 text-gray-700">Happy Valentine's Day! ❤️ <br> Love, Regina</p>
+    <p class="text-center mt-4 text-gray-700">I Love You Sayanggggg! ❤️ <br> Love, Adel</p>
   </div>
 
   <script>
